Created layout for CV page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,156 @@
-<h1>Hello world!</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Ubuntu:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>CV</title>
+  </head>
+  <body>
+    <div class="page">
+      <header class="about">
+        <div>
+          <h1 class="about__name">Igor Oksentyuk</h1>
+          <p class="about__role">FRONTEND DEVELOPER | ODESA</p>
+          <p class="about__text">
+            I’m a goal-oriented, creative and self-motivated web developer
+            specializing in front-end. I am well familiar with CSS/HTML, Sass
+            preprocessor, JS, Angular, cross-browser and adaptive markup skills.
+            Eager to improve my skills, always try to learn new technologies and
+            stay up-to-date with Web development trends. I also learn quickly
+            and easily communicate with people
+          </p>
+        </div>
+        <img class="about__photo" src="my-photo.png" alt="Igor_Oksentyuk" />
+      </header>
+
+      <main class="main">
+        <div class="contacts">
+          <a class="contacts__link" href="tel:+380672897517">+380672897517</a>
+          <a class="contacts__link" href="mailto:winbka.lem@gmail.com"
+            >winbka.lem@gmail.com</a
+          >
+          <a class="contacts__link" href="https://t.me/igor_oksentyuk"
+            >Telegram</a
+          >
+        </div>
+
+        <section class="info">
+          <h2 class="info__title">Experience</h2>
+
+          <div class="info__content">
+            <article class="job">
+              <h3 class="job__title">Here will be my work experience</h3>
+
+              <p class="job__description">
+                <strong>Projects:</strong> Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Similique nostrum laboriosam
+                voluptatibus sunt dicta ab sed! Eum nostrum ex laboriosam?
+              </p>
+              <p class="job__description">
+                <strong>Tech stack:</strong> Lorem ipsum dolor, sit amet
+                consectetur adipisicing elit. Sint veniam aliquam, deleniti
+                fugiat officia nisi alias similique. Aperiam, tempore ducimus!
+              </p>
+              <p class="job__description">
+                <strong>My responsibilities:</strong> Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Incidunt consectetur provident
+                officiis consequatur voluptates saepe, sequi eos fugiat
+                architecto. Iste fuga accusamus dolore necessitatibus eaque!
+              </p>
+            </article>
+
+            <article class="job">
+              <h3 class="job__title">Here will be my work experience</h3>
+
+              <p class="job__description">
+                <strong>Projects:</strong> Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Similique nostrum laboriosam
+                voluptatibus sunt dicta ab sed! Eum nostrum ex laboriosam?
+              </p>
+              <p class="job__description">
+                <strong>Tech stack:</strong> Lorem ipsum dolor, sit amet
+                consectetur adipisicing elit. Sint veniam aliquam, deleniti
+                fugiat officia nisi alias similique. Aperiam, tempore ducimus!
+              </p>
+              <p class="job__description">
+                <strong>My responsibilities:</strong> Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Incidunt consectetur provident
+                officiis consequatur voluptates saepe, sequi eos fugiat
+                architecto. Iste fuga accusamus dolore necessitatibus eaque!
+              </p>
+            </article>
+          </div>
+        </section>
+
+        <section class="info">
+          <h2 class="info__title">Education</h2>
+
+          <div class="info__content">
+            <article class="study">
+              <h3 class="study__title">
+                Odesa National Law Academy | 2014 - 2020
+              </h3>
+
+              <p class="study__description">Master of Law</p>
+            </article>
+            <article class="study">
+              <h3 class="study__title">
+                Odesa National Law Academy | 2017- 2018
+              </h3>
+
+              <p class="study__description">
+                Course of lectures and seminars in Law in English
+              </p>
+            </article>
+          </div>
+        </section>
+
+        <section class="info">
+          <h2 class="info__title">Skills</h2>
+
+          <div class="info__content">
+            <div class="skills">
+              <ul class="skills__list">
+                <li class="skills__item">HTML5</li>
+                <li class="skills__item">CSS3</li>
+                <li class="skills__item">Sass (SCSS)</li>
+                <li class="skills__item">BEM</li>
+              </ul>
+              <ul class="skills__list">
+                <li class="skills__item">Webpack</li>
+                <li class="skills__item">Javascript</li>
+                <li class="skills__item">Angular</li>
+                <li class="skills__item">RxJS</li>
+              </ul>
+            </div>
+          </div>
+        </section>
+
+        <section class="info">
+          <h2 class="info__title">Tools</h2>
+
+          <div class="info__content">
+            <div class="tools">
+              <ul class="tools__list">
+                <li class="tools__item">Figma</li>
+                <li class="tools__item">GIT</li>
+              </ul>
+              <ul class="tools__list">
+                <li class="tools__item">NPM</li>
+                <li class="tools__item">VSCode</li>
+              </ul>
+            </div>
+          </div>
+        </section>
+      </main>
+    </div>
+  </body>
+</html>
